change scripts for new ide support